force-app/main/default/objects/Application__c/fields/Bank_City__c.field-meta.xml
<CustomField>
    <fullName>Bank_City__c</fullName>
    <label>Bank City</label>
    <length>20</length>
    <type>Text</type>
</CustomField>