force-app/main/default/objects/Application__c/fields/BankAccountHolderName__c.field-meta.xml
<CustomField>
    <fullName>BankAccountHolderName__c</fullName>
    <label>BankAccountHolderName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>