force-app/main/default/objects/Application__c/fields/Donate_Amount__c.field-meta.xml
<CustomField>
    <fullName>Donate_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Donate-Amount</label>
    <type>Checkbox</type>
</CustomField>