force-app/main/default/objects/Application__c/fields/IFSC__c.field-meta.xml
<CustomField>
    <fullName>IFSC__c</fullName>
    <label>IFSC</label>
    <length>20</length>
    <type>Text</type>
</CustomField>