force-app/main/default/objects/Application__c/fields/Requested_Scholarship_Amount__c.field-meta.xml
<CustomField>
    <fullName>Requested_Scholarship_Amount__c</fullName>
    <label>Requested Scholarship Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>