force-app/main/default/objects/Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-eligible</fullName>
            </value>
            <value>
                <fullName>eligible</fullName>
            </value>
            <value>
                <fullName>selected</fullName>
            </value>
            <value>
                <fullName>Amount-Founded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>