force-app/main/default/objects/Application__c/fields/Study__c.field-meta.xml
<CustomField>
    <fullName>Study__c</fullName>
    <label>Year in which study</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1st year</fullName>
            </value>
            <value>
                <fullName>2nd  year</fullName>
            </value>
            <value>
                <fullName>3rd year</fullName>
            </value>
            <value>
                <fullName>4th year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>