force-app/main/default/objects/Application__c/recordTypes/Medium.recordType-meta.xml
<RecordType>
    <fullName>Medium</fullName>
    <active>true</active>
    <label>Medium</label>
</RecordType>