force-app/main/default/objects/Application__c/validationRules/Requested_scholar_ship_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Requested_scholar_ship_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Requested_Scholarship_Amount__c  &gt;=  40000</errorConditionFormula>
    <errorDisplayField>Requested_Scholarship_Amount__c</errorDisplayField>
    <errorMessage>&quot;Requested Scholarship amount&quot; should not be greater than 40000.</errorMessage>
</ValidationRule>